--- a/config/argo-rollouts/kustomization.yaml
+++ b/config/argo-rollouts/kustomization.yaml
@@ -11,7 +11,7 @@ patches:
     patch: |
       - op: replace
         path: /spec/template/spec/containers/0/image
-        value: csanchez/rollouts-plugin-metric-ai:latest
+        value: ghcr.io/carlossg/rollouts-plugin-metric-ai
   # add the plugin to the configmap
   - target:
       kind: ConfigMap
