--- a/config/argo-rollouts/kustomization.yaml
+++ b/config/argo-rollouts/kustomization.yaml
@@ -1,84 +1,80 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: quay.io/argoproj/argo-rollouts
+  newName: ghcr.io/carlossg/rollouts-plugin-metric-ai
+  newTag: latest
 # downloaded from https://github.com/argoproj/argo-rollouts/releases/download/v1.8.3/install.yaml
 resources:
-  - install.yaml
-  - secret.yaml
+- install.yaml
+- secret.yaml
 namespace: argo-rollouts
 patches:
-  # change the image to the local image
-  - target:
-      kind: Deployment
-      name: argo-rollouts
-    patch: |
-      - op: replace
-        path: /spec/template/spec/containers/0/image
-        value: ghcr.io/carlossg/rollouts-plugin-metric-ai
-  # add the plugin to the configmap
-  - target:
-      kind: ConfigMap
-      name: argo-rollouts-config
-    patch: |
-      - op: add
-        path: /data
-        value:
-          metricProviderPlugins: |-
-            - name: argoproj-labs/metric-ai
-              location: file:///home/argo-rollouts/rollouts-plugin-metric-ai
-
-  - target:
-      kind: Deployment
-      name: argo-rollouts
-    patch: |
-      # set imagePullPolicy to IfNotPresent for dind
-      - op: replace
-        path: /spec/template/spec/containers/0/imagePullPolicy
-        value: IfNotPresent
-      # set loglevel to debug
-      - op: replace
-        path: /spec/template/spec/containers/0/args
-        value: ["--loglevel", "debug"]
-      # add environment variables for plugin configuration
-      - op: add
-        path: /spec/template/spec/containers/0/env
-        value: []
-      - op: add
-        path: /spec/template/spec/containers/0/env/-
-        value:
-          name: LOG_LEVEL
-          value: "debug"
-      # mount secrets as files
-      - op: add
-        path: /spec/template/spec/volumes/-
-        value:
-          name: secrets
-          secret:
-            secretName: argo-rollouts
-      - op: add
-        path: /spec/template/spec/containers/0/volumeMounts/-
-        value:
-          name: secrets
-          mountPath: /etc/secrets
-          readOnly: true
-
-  # Add pod logs permissions to the ClusterRole
-  - target:
-      kind: ClusterRole
-      name: argo-rollouts
-    patch: |
-      - op: add
-        path: /rules/-
-        value:
-          apiGroups:
-            - ""
-          resources:
-            - pods
-          verbs:
-            - get
-      - op: add
-        path: /rules/-
-        value:
-          apiGroups:
-            - ""
-          resources:
-            - pods/log
-          verbs:
-            - get
+- patch: |
+    # add the plugin to the configmap
+    - op: add
+      path: /data
+      value:
+        metricProviderPlugins: |-
+          - name: argoproj-labs/metric-ai
+            location: file:///home/argo-rollouts/rollouts-plugin-metric-ai
+  target:
+    kind: ConfigMap
+    name: argo-rollouts-config
+- patch: |
+    # set imagePullPolicy to IfNotPresent for dind
+    - op: replace
+      path: /spec/template/spec/containers/0/imagePullPolicy
+      value: IfNotPresent
+    # set loglevel to debug
+    - op: replace
+      path: /spec/template/spec/containers/0/args
+      value: ["--loglevel", "debug"]
+    # add environment variables for plugin configuration
+    - op: add
+      path: /spec/template/spec/containers/0/env
+      value: []
+    - op: add
+      path: /spec/template/spec/containers/0/env/-
+      value:
+        name: LOG_LEVEL
+        value: "debug"
+    # mount secrets as files
+    - op: add
+      path: /spec/template/spec/volumes/-
+      value:
+        name: secrets
+        secret:
+          secretName: argo-rollouts
+    - op: add
+      path: /spec/template/spec/containers/0/volumeMounts/-
+      value:
+        name: secrets
+        mountPath: /etc/secrets
+        readOnly: true
+  target:
+    kind: Deployment
+    name: argo-rollouts
+- patch: |
+    # Add pod logs permissions to the ClusterRole
+    - op: add
+      path: /rules/-
+      value:
+        apiGroups:
+          - ""
+        resources:
+          - pods
+        verbs:
+          - get
+    - op: add
+      path: /rules/-
+      value:
+        apiGroups:
+          - ""
+        resources:
+          - pods/log
+        verbs:
+          - get
+  target:
+    kind: ClusterRole
+    name: argo-rollouts
